--- a/index.html
+++ b/index.html
@@ -4,30 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
     <header> 
         <nav>
             <ul>
-                <li> <a href=""><span>Web</span> Studio</a> </li>
+                <li> <a href="/"><span>Web</span> Studio</a> </li>
                 <li> <a href="">Студия</a> </li>
                 <li> <a href="">Портфолио</a> </li>
                 <li> <a href="">Контакты</a> </li>
             </ul>
         </nav>
         <ul>
-            <li> <a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </li>
         </ul>
     </header>
 
     <main> 
         <!-- секция герой -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        </section>
+        <div>
+            <section>
+                <h1>Эффективные решения для вашего бизнеса</h1>
+                <button type="button">Заказать услугу</button>
+            </section>
+        </div>
         <!-- секция преимущества -->
         <section>
             <h2>Преимущества</h2>
@@ -54,9 +60,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box 1.jpg" alt="работа с кодом" width="370px"> </li>
-                <li><img src="./images/box 2.jpg" alt="веб-дизайн" width="370px"> </li>
-                <li><img src="./images/box 3.jpg" alt="семантика и колористика" width="370px"> </li>
+                <li><img src="./images/box1.jpg" alt="работа с кодом" width="370px"> </li>
+                <li><img src="./images/box2.jpg" alt="веб-дизайн" width="370px"> </li>
+                <li><img src="./images/box3.jpg" alt="семантика и колористика" width="370px"> </li>
             </ul>
         </section>
         <!-- секция Наша команда -->
@@ -64,22 +70,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/Игорь Демьяненко.jpg" alt="Игорь Демьяненко" width="270px">
+                    <img src="./images/YhorDemianenko.jpg" alt="Игорь Демьяненко" width="270px">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/Ольга Репина.jpg" alt="Ольга Репина" width="270px">
+                    <img src="./images/OlhaRepyna.jpg" alt="Ольга Репина" width="270px">
                     <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Николай Тарасов.jpg" alt="Николай Тарасов" width="270px">
+                    <img src="./images/NykolaiTarasov.jpg" alt="Николай Тарасов" width="270px">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Михаил Ермаков.jpg" alt="Михаил Ермаков" width="270px">
+                    <img src="./images/MykhaylErmakov.jpg" alt="Михаил Ермаков" width="270px">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
@@ -88,12 +94,14 @@
     </main>
 
     <footer>
-        <a href=""><span>Web</span> Studio</a>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26 <br>
-            info@example.com <br>
-            +38 099 111 11 11
-        </address>
+        <div>
+            <a href=""><span>Web</span> Studio</a>
+            <address>
+                г. Киев, пр-т Леси Украинки, 26 <br>
+                info@example.com <br>
+                +38 099 111 11 11
+            </address>
+        </div>
     </footer>
 </body>
 </html>
