--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -60,9 +60,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/box1.jpg" alt="работа с кодом" width="370px"> </li>
-                <li><img src="./images/box2.jpg" alt="веб-дизайн" width="370px"> </li>
-                <li><img src="./images/box3.jpg" alt="семантика и колористика" width="370px"> </li>
+                <li><img src="./images/box1.jpg" alt="работа с кодом" width="370"> </li>
+                <li><img src="./images/box2.jpg" alt="веб-дизайн" width="370"> </li>
+                <li><img src="./images/box3.jpg" alt="семантика и колористика" width="370"> </li>
             </ul>
         </section>
         <!-- секция Наша команда -->
@@ -70,22 +70,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/YhorDemianenko.jpg" alt="Игорь Демьяненко" width="270px">
+                    <img src="./images/YhorDemianenko.jpg" alt="Игорь Демьяненко" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/OlhaRepyna.jpg" alt="Ольга Репина" width="270px">
+                    <img src="./images/OlhaRepyna.jpg" alt="Ольга Репина" width="270">
                     <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/NykolaiTarasov.jpg" alt="Николай Тарасов" width="270px">
+                    <img src="./images/NykolaiTarasov.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/MykhaylErmakov.jpg" alt="Михаил Ермаков" width="270px">
+                    <img src="./images/MykhaylErmakov.jpg" alt="Михаил Ермаков" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
