--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header> 
         <nav>
+            <a href="/"><span>Web</span> Studio</a>
             <ul>
-                <li> <a href="/"><span>Web</span> Studio</a> </li>
                 <li> <a href="">Студия</a> </li>
                 <li> <a href="">Портфолио</a> </li>
                 <li> <a href="">Контакты</a> </li>
@@ -96,11 +96,15 @@
     <footer>
         <div>
             <a href=""><span>Web</span> Studio</a>
-            <address>
-                г. Киев, пр-т Леси Украинки, 26 <br>
-                info@example.com <br>
-                +38 099 111 11 11
-            </address>
+            <p>г. Киев, пр-т Леси Украинки, 26</p>
+            <ul>
+                <li>
+                    <a href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>      
         </div>
     </footer>
 </body>
